# oss-data-platform

./: .cursorrules  .env.example  .gitignore  AGENTS.md  Makefile  README.md  definitions.py  docker-compose.yml  prediction_config.json  prediction_config_1_16.json  prediction_config_1_22.json  pyproject.toml  requirements.txt
adapters/: __init__.py  airbyte_adapter.py  base.py  baselinr_adapter.py  dagster_adapter.py  datahub_adapter.py  dlt_adapter.py  odcs_models.py  sqlmesh_adapter.py
catalog/: README.md
contracts/: README.md  composer.py
docker/: Dockerfile  Dockerfile.mlflow
docs/: export-import-raw-data.md
examples/: README.md  end_to_end_pipeline.py
feature_repo/: .feastignore  README.md  __init__.py  data_sources.py  entities.py  feature_store.yaml  features.py
ingestion/: README.md
ml_iteration/: next_steps.md  run.py
monitoring/: README.md
optimization_flow/: README.md  run.py
orchestration/: README.md
quality/: README.md
scripts/: analyze_feature_correlations.py  analyze_mavericks_upset.py  analyze_mavericks_upset_v2.py  analyze_missing_features.py  analyze_prediction_errors.py  analyze_warriors_features.py  analyze_warriors_prediction.py  backfill_all_models_chunked.py  backfill_espn_injuries_2024_25.py  backfill_espn_injuries_wayback.py  backfill_from_github_nba_data.py  backfill_game_features_range.py  backfill_historical_injuries.py  backfill_historical_nba.py  backfill_incremental_chunked.py  backfill_lookup_chunked.py  backfill_prosportstransactions_2024_25.py  backfill_prosportstransactions_selenium.py  batch_fix_incremental.py  cancel_dagster_runs.py  compare_models_warriors.py  create_features_view_manual.py  create_injury_view.py  create_mart_game_features.sql  create_sqlmesh_indexes.py  dagster_monitor_run.py  dagster_run_logs.py  dagster_terminate_runs.py  db_query.py  diagnose_injury_matching.py  download_kaggle_injuries.py  download_kaggle_nba.py  ensure_contract_indexes.py  ensure_raw_dev_games_indexes.py  (+38 more)
(+116 files in other folders)
