[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-data-platform"
version = "0.1.0"
description = "End-to-end open-source data engineering platform"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "OSS Data Platform Contributors"}
]
keywords = [
    "data-engineering",
    "data-platform",
    "open-source",
    "odcs",
    "data-contracts",
    "dagster",
    "sqlmesh",
    "baselinr",
    "datahub",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "baselinr>=0.1.0",
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
    "dagster-postgres>=0.21.0",
    "sqlmesh>=0.0.1",
    "dlt>=0.3.0",
    "datahub>=0.12.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["adapters", "contracts", "ingestion", "orchestration", "tools", "transformation", "quality", "catalog", "monitoring", "storage"]
